# Open-PDF-Studio

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  THIRD-PARTY-LICENSES.md  eslint.config.mjs  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
e2e-tests/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wdio.conf.ts
e2e-tests/ci/: run-deelevated.ps1
e2e-tests/fixtures/: test-signer.crt.pem  test-signer.key.pem  test-signer.pfx
e2e-tests/specs/: 01-boot.spec.ts  02-open-pdf.spec.ts  03-view-switch.spec.ts  04-save-as.spec.ts  05-malformed-refuse.spec.ts  06-annotations.spec.ts  07-import-existing-annotations.spec.ts  08-redaction.spec.ts  09-watermark.spec.ts  10-forms.spec.ts  11-compare.spec.ts  12-signatures.spec.ts  13-signing.spec.ts  14-ocr-find.spec.ts  15-multiselect.spec.ts  16-outline.spec.ts  17-import-pages.spec.ts  18-canvas-forms.spec.ts  19-canvas-merge.spec.ts  20-release-gates.spec.ts  21-window-effects.spec.ts  22-menubar.spec.ts  23-navpane.spec.ts  24-bookmarks.spec.ts  25-search.spec.ts  26-signatures-navpanel.spec.ts  27-document-view.spec.ts  28-secondary-toolbar.spec.ts  29-preferences.spec.ts  30-properties.spec.ts  31-print.spec.ts  32-document-menu.spec.ts  33-rotate-view.spec.ts  34-hand-tool.spec.ts  35-single-keys.spec.ts  36-commit-matrix.spec.ts  37-dialog-keys.spec.ts  38-path-identity.spec.ts  39-thousand-pages.spec.ts  40-batch-ocr.spec.ts  (+32 more)
e2e-tests/support/: harness.ts
scripts/: bundle-ghostscript.ps1  bundle-libreoffice.ps1  convert-icon.py  gen-installer-images.py  generate-icon.py  lock-python-deps.ps1  lockgen.py  python-requirements.in  python-requirements.txt  setup-python-embed.ps1  sync-edit-fonts.ps1  sync-ocr-assets.mjs
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  engine.rs  lib.rs  main.rs  printers.rs
src/engine/: __init__.py  __main__.py  __startup__.py  accessibility.py  acroform.py  annotations.py  attachments.py  check.py  color_spaces.py  compare.py  compress.py  content_walk.py  delete.py  distill.py  document_js.py  encrypt.py  extract_text.py  font_fallback.py  font_features.py  font_kerning.py  forms.py  grayscale.py  headers.py  inspect.py  ipc.py  layers.py  links.py  merge.py  metadata.py  ocr_layer.py  office_export.py  optimize.py  outline.py  page_boxes.py  page_images.py  page_labels.py  page_vectors.py  pdf_fonts.py  pdf_metrics.py  pdf_tree.py  (+18 more)
src/renderer/: App.tsx  index.html  index.tsx  styles.css  testHarness.ts
src/renderer/canvas/: canvas-handle.ts  constrain.ts  create-zoom-behavior.ts  drag-ghost.ts  drop-target.ts  fit-transform.ts  layout.ts  reading-page.ts  use-zoom-behavior.ts  usePageDrag.ts  zoom-constants.ts
tests/: accent.test.ts  acroform-carry.test.ts  annotation-import.test.ts  backdrop.test.ts  batch-ocr.test.ts  blank-page.test.ts  canvas-layout.test.ts  commands.test.ts  conftest.py  constrain.test.ts  durable-identity.test.ts  edit-paragraphs.test.ts  edit-text.test.ts  edit-vectors.test.ts  form-authoring.test.ts  form-overlay.test.ts  forms.test.ts  image-replace.test.ts  image-transform.test.ts  insert-anchor.test.ts  keymap.test.ts  menus.test.ts  merge-docs.test.ts  operation-queue.test.ts  outline-reorder.test.ts  page-context-menu.test.ts  page-reorder.test.ts  pdf-doc-cache.test.ts  pdfx-format.test.ts  print-params.test.ts  reading-page.test.ts  reblit.test.ts  recent-files.test.ts  redaction.test.ts  search-engine.test.ts  signature-placement.test.ts  signatures.test.ts  test_accessibility.py  test_acroform_carry.py  test_annotations.py  (+39 more)
tests/fixtures/: sample.pdfx
tests/helpers/: pdflib-forms.ts
(+164 files in other folders)
