[package]
name = "openpdfstudio"
version = "2.4.0"
description = "Modern PDF manipulation studio"
authors = ["Jason Ulbright"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "openpdfstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.56"
window-vibrancy = "0.6"
windows-version = "0.1"
windows = { version = "0.61", features = ["UI_ViewManagement", "Win32_Graphics_Printing", "Win32_Foundation"] }
tokio = { version = "1", features = ["sync", "io-util"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
# Windows-safe fs::canonicalize (strips the \\?\ verbatim prefix): file
# identity is the raw path STRING app-wide, so every path must enter the
# renderer in ONE canonical spelling (M7 — the path-identity gate).
dunce = "1"
# TRUE file identity (volume serial + file index), for the batch-mirror
# same-file refusals: canonical STRINGS can disagree about one physical file
# (UNC vs mapped drive letter, hardlinks — Windows' VOLUME_NAME_DOS behavior
# is version-inconsistent for network mounts), and a string-only guard there
# risks overwriting a user's originals. Hand-rolled GetFileInformationByHandle
# rejected: more unsafe code to get wrong than this zero-frills crate.
same-file = "1"
clap = { version = "4", features = ["derive"] }
